--- a/softdevfinals/templates/accounts/password_reset.html
+++ b/softdevfinals/templates/accounts/password_reset.html
@@ -1,4 +1,3 @@
-<!-- templates/accounts/password_reset.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,7 +17,9 @@
     <div>
         {% if messages %}
             {% for message in messages %}
-                <p>{{ message }}</p>
+                {% if "password_reset" in message.tags %}
+                    <p{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</p>
+                {% endif %}
             {% endfor %}
         {% endif %}
     </div>
