--- a/softdevfinals/templates/accounts/password_reset_confirm.html
+++ b/softdevfinals/templates/accounts/password_reset_confirm.html
@@ -16,7 +16,7 @@
             <input type="password" id="confirm_password" name="confirm_password" required>
             <br>
             <small>Password must be greater than 8</small>
-        </br>
+            <br>
             <button type="submit">Reset Password</button>
         </form>
     {% else %}
@@ -26,7 +26,9 @@
     <div>
         {% if messages %}
             {% for message in messages %}
-                <p>{{ message }}</p>
+                {% if "password_reset_confirm" in message.tags %}
+                    <p{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</p>
+                {% endif %}
             {% endfor %}
         {% endif %}
     </div>
