--- a/softdevfinals/templates/home/home.html
+++ b/softdevfinals/templates/home/home.html
@@ -64,28 +64,44 @@
             </div>
         </form>
 
+        <div class="mt-4">
+            <p>Sort by rating:</p>
+            <a href="{% url 'home' %}?order=highest" class="btn btn-info">Most Rated</a>
+            <a href="{% url 'home' %}?order=lowest" class="btn btn-info">Least Rated</a>
+            <a href="{% url 'home' %}" class="btn btn-info">Random</a>
+            <a href="?order=most_views" class="btn btn-info">Most Visited</a>
+        </div>
+
         <h3 class="mt-4">Your Recipes</h3>
-        <ul class="list-group mt-3">
-            {% for recipe in recipes %}
-                <li class="list-group-item">
-                    <h5>{{ recipe.name }}</h5>
-                    {% if recipe.image %}
-                        <a href="{% url 'recipe-detail' recipe.id %}">
-                            <img src="{{ recipe.image.url }}" alt="{{ recipe.name }}" style="max-width: 100px;">
-                        </a>
-                    {% endif %}
-                    <p><strong>Ingredients:</strong> {{ recipe.ingredients }}</p>
-                    <p><strong>Cooking Time:</strong> {{ recipe.minutes }} minutes</p>
-                    {% if recipe.user %}
-                        <p><strong>Created By:</strong> {{ recipe.user.username }}</p>
-                    {% else %}
-                        <p><strong>Created By:</strong> Unknown</p>
-                    {% endif %}
-                </li>
-            {% empty %}
-                <li class="list-group-item">No recipes found.</li>
-            {% endfor %}
-        </ul>
+     <ul class="list-group mt-3">
+    {% for recipe in recipes %}
+        <li class="list-group-item">
+            <h5>{{ recipe.name }}</h5>
+            {% if recipe.image %}
+                <a href="{% url 'recipe-detail' recipe.id %}">
+                    <img src="{{ recipe.image.url }}" alt="{{ recipe.name }}" style="max-width: 100px;">
+                </a>
+            {% endif %}
+            <p><strong>Ingredients:</strong> {{ recipe.ingredients }}</p>
+            <p><strong>Cooking Time:</strong> {{ recipe.minutes }} minutes</p>
+            {% if recipe.user %}
+                <p><strong>Created By:</strong> {{ recipe.user.username }}</p>
+            {% else %}
+                <p><strong>Created By:</strong> Unknown</p>
+            {% endif %}
+
+            <!-- Display the average rating -->
+            {% if recipe.average_rating %}
+                <p><strong>Average Rating:</strong> {{ recipe.average_rating|floatformat:1 }} / 5</p>
+            {% else %}
+                <p><strong>Average Rating:</strong> No ratings yet</p>
+            {% endif %}
+        </li>
+    {% empty %}
+        <li class="list-group-item">No recipes found.</li>
+    {% endfor %}
+</ul>
+
         
     </div>
 
