creating profile for new users (wla pa edit profile n bio)

--- a/softdevfinals/templates/home/home.html
+++ b/softdevfinals/templates/home/home.html
@@ -36,6 +36,8 @@
         
         <a href="{% url 'recipe-create' %}" class="btn btn-primary mt-3">Create New Recipe</a>
 
+        <a href="{% url 'profile' %}" class="btn btn-primary mt-3">Profile</a>
+
         <!-- Search Mode Selection -->
         <div class="mt-4">
             <button class="btn btn-info" onclick="setSearchMode('standard')">Normal Search</button>
