Change password, contact us, trending

--- a/softdevfinals/templates/accounts/login.html
+++ b/softdevfinals/templates/accounts/login.html
@@ -24,7 +24,8 @@
         </form>
         <div class="text-center mt-3">
             <a href="{% url 'register' %}">Don't have an account? Register here</a> <br/>
-            <a href="{% url 'password_reset' %}">Forgot Password?</a>
+            <a href="{% url 'password_reset' %}">Forgot Password?</a> <br/>
+            <a href="{% url 'contact_us' %}">Contact us</a>
 
             
         </div>
