--- a/softdevfinals/templates/accounts/profile.html
+++ b/softdevfinals/templates/accounts/profile.html
@@ -21,6 +21,7 @@
     <div class="mt-3">
         <a href="{% url 'update_user' %}" class="btn btn-primary">Update User Information</a>
         <a href="{% url 'update_profile' %}" class="btn btn-secondary">Update Profile</a>
+        <a href="{% url 'change_password' %}" class="btn btn-secondary">Change Password</a>
     </div>
 
     <!-- Display user's recipes -->
