--- a/softdevfinals/templates/accounts/password_reset_confirm.html
+++ b/softdevfinals/templates/accounts/password_reset_confirm.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Password Reset Confirmation</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'css/password_reset_confirm.css' %}">
 </head>
 <body>
-    <h2>Password Reset Confirmation</h2>
-    {% if valid_link %}
-        <form method="post">
-            {% csrf_token %}
-            <label for="new_password">New Password:</label>
-            <input type="password" id="new_password" name="new_password" required>
-            <br>
-            <label for="confirm_password">Confirm Password:</label>
-            <input type="password" id="confirm_password" name="confirm_password" required>
-            <br>
-            <small>Password must be greater than 8</small>
-            <br>
-            <button type="submit">Reset Password</button>
-        </form>
-    {% else %}
-        <p>The password reset link is invalid or has expired.</p>
-    {% endif %}
-
+    <div class="box-container">
+        <h3>Password Reset Confirmation</h3>
+        {% if valid_link %}
+            <form method="post">
+                {% csrf_token %}
+                <label for="new_password">New Password:</label>
+                <input type="password" class="form-control mb-3" id="new_password" name="new_password" required>
+                <label for="confirm_password">Confirm Password:</label>
+                <input type="password" class="form-control mb-3" id="confirm_password" name="confirm_password" required>
+                <small>Password must be greater than 8</small>
+                <div class="text-right">
+                    <button type="submit" class="btn custom-btn ml-auto">Reset Password</button>
+                </div>
+                
+            </form>
+        {% else %}
+            <p>The password reset link is invalid or has expired.</p>
+        {% endif %}
+    </div>
     
 </body>
 </html>
