--- a/softdevfinals/templates/accounts/password_reset.html
+++ b/softdevfinals/templates/accounts/password_reset.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'css/password_reset.css' %}">
     <title>Password Reset</title>
 </head>
 <body>
-    <h2>Password Reset</h2>
-    <form method="post">
-        {% csrf_token %}
-        <label for="email">Enter your email address:</label>
-        <input type="email" name="email" required>
-        <button type="submit">Send Password Reset Link</button>
-    </form>
-
-    
-
-    <p><a href="{% url 'login' %}">Back to Login</a></p>
+    <div class="box-container p-4">
+        <h4 class="text-center">Reset Password</h4>
+        <form method="post">
+            {% csrf_token %}
+            <input type="email" class="form-control mb-3" id="email" name="email" placeholder="Enter your email" required>
+            <button type="submit" class="btn custom-btn btn-block">Reset</button>
+        </form>
+        <p><a href="{% url 'login' %}">Back to Login</a></p>
+    </div>
 </body>
+
 </html>
