jerry and friends

--- a/softdevfinals/templates/accounts/register.html
+++ b/softdevfinals/templates/accounts/register.html
@@ -11,38 +11,53 @@
 <body>
 
   <div class="box-container">
-    <h2 class ="text-center">Register</h2>
+    <h2 class="text-center">Register</h2>
     <h4>Create your Account</h4>
 
-    {% if form.errors %}
-      <div class="alert alert-danger">
-        <strong>Please correct the following errors:</strong>
-        <ul>
-          {% for field in form %}
-            {% for error in field.errors %}
-              <li>{{ field.label }}: {{ error }}</li>
-            {% endfor %}
-          {% endfor %}
-          {% for error in form.non_field_errors %}
-            <li>{{ error }}</li>
-          {% endfor %}
-        </ul>
-      </div>
-    {% endif %}
 
     <form method="POST" class="mt-4">
-      {% csrf_token %}  
-      {{ form.as_p }}
+      {% csrf_token %}
+      
+      <div class="form-group">
+        <label for="id_username">{{ form.username.label }}</label>
+        {{ form.username }}
+        {% if form.username.errors %}
+          <div class="text-danger">{{ form.username.errors }}</div>
+        {% endif %}
+      </div>
+
+      <div class="form-group">
+        <label for="id_email">{{ form.email.label }}</label>
+        {{ form.email }}
+        {% if form.email.errors %}
+          <div class="text-danger">{{ form.email.errors }}</div>
+        {% endif %}
+      </div>
+
+      <div class="form-group">
+        <label for="id_password1">{{ form.password1.label }}</label>
+        {{ form.password1 }}
+        {% if form.password1.errors %}
+          <div class="text-danger">{{ form.password1.errors }}</div>
+        {% endif %}
+      </div>
+
+      <div class="form-group">
+        <label for="id_password2">{{ form.password2.label }}</label>
+        {{ form.password2 }}
+        {% if form.password2.errors %}
+          <div class="text-danger">{{ form.password2.errors }}</div>
+        {% endif %}
+      </div>
+
       <div class="text-right mt-3">
         <button type="submit" class="btn custom-btn">Register</button>
       </div>
     </form>
 
     <div class="text-center mt-3">
-      <small>Already registered but haven't received a verification email? <a href="{% url 'resend_verification' %}">Resend Verification here</a></small> <br/>
-      <small>Already have an account? <a href="{% url 'login' %}" class="mt-auto">Log in</a></small> 
-      
-      
+      <small>Already registered but haven't received a verification email? <a href="{% url 'resend_verification' %}">Resend Verification here</a></small><br/>
+      <small>Already have an account? <a href="{% url 'login' %}">Log in</a></small>
     </div>
   </div>
 
