--- a/softdevfinals/templates/recipes/recipe_detail.html
+++ b/softdevfinals/templates/recipes/recipe_detail.html
@@ -11,11 +11,25 @@
         <a href="{% url 'home' %}" class="btn btn-danger">Go back</a>
         <h2>{{ object.name }}</h2>
         
-        <div>
-            {% if object.user == user %}
-                <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'recipe-update' object.id %}">Update</a>
-                <a class="btn btn-danger" href="{% url 'recipe-delete' object.id %}">Delete</a>
-            {% endif %}
+        <div class="d-flex justify-content-between align-items-center">
+            <div>
+                {% if object.user == user %}
+                    <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'recipe-update' object.id %}">Update</a>
+                    <a class="btn btn-danger" href="{% url 'recipe-delete' object.id %}">Delete</a>
+                {% endif %}
+            </div>
+        
+            <div class="col-md-4 text-center">
+                {% if object.user.profile.image %}
+                    <a href="{% url 'user_profile' object.user.id %}">
+                        <img src="{{ object.user.profile.image.url }}" alt="{{ object.user.username }}'s profile image" style="width: 100%; height: auto; max-width: 150px;" class="rounded-circle">
+                    </a>
+                {% else %}
+                    <p>No profile image available.</p>
+                {% endif %}
+                <p><strong>{{ object.user.username }}</strong></p>
+                <p>{{ object.user.profile.bio }}</p>
+            </div>
         </div>
         
         <div>
@@ -96,6 +110,8 @@
                 <li class="list-group-item">No comments yet.</li>
             {% endfor %}
         </ul>
+
+        
         </div>
         <script>
             function toggleUpdateForm(formId) {
