--- a/softdevfinals/templates/recipes/recipe_confirm_delete.html
+++ b/softdevfinals/templates/recipes/recipe_confirm_delete.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Recipe</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'css/recipe_confirm_delete.css' %}">
     {% load crispy_forms_tags %}
+    
 </head>
 <body>
-    <div class="container mt-5">
-        <h2>Delete Post</h2>
+    <div class="box-container p-4 mt-4">
+        <h3>Delete Post</h3>
         <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
-            <h2>Are you Sure you Want to delete your recipe "{{object.name}}"?</h2>
-            <button type="submit" class="btn btn-outline-danger">Delete</button>
-            <a class="btn btn-primary" href="{% url 'recipe-detail' object.id %}">Cancel</a>
+            <p>Are you Sure you Want to delete your recipe "{{object.name}}"?</p>
+            <div style="text-align: center;">
+                <button type="submit" class="btn btn-outline-danger">Delete</button>
+                <a class="btn btn-primary" href="{% url 'recipe-detail' object.id %}">Cancel</a>
+            </div>
+            
 
         </form>
     </div>
